--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 :root {
-  
   --parrafo1: rgb(38, 38, 38);
   --naturalezaFondo: #cae8bd;
+  --naturalezaBorde: #bdffa0;
   --ciudadFondo: #eeeeee;
-  --genteFondo: #ffddc8;
-  --comidaFondo: #fff7d1;
-
+  --ciudadBorde: #d4d4d4;
+  --genteFondo: #ffebdf;
+  --genteBorde: #FEE8D9;
+  --comidaFondo: #fff6c8;
+  --comidaBorde: #ffec80;
 
   --titulo: black;
   --colorFondo: #fffefc;
@@ -20,14 +22,6 @@
 html {
   scroll-behavior: smooth;
   background-color: var(--colorFondo);
-  /* background: #ffffff;
-  background: radial-gradient(
-    circle,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(245, 249, 255, 1) 53%,
-    rgba(255, 255, 255, 1) 83%,
-    rgba(255, 250, 255, 1) 100%
-  ); */
 }
 /* Menu Animacion w3schools */
 .container {
@@ -57,19 +51,92 @@ html {
   transform: translate(0, -10px) rotate(45deg);
 }
 
+/* HERO */
+.heroContainer {
+  display: flex;
+  height: 120dvh;
+  /* border: 2px solid green; */
+  /* clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%); */
+}
+.heroImagen {
+  position: fixed;
+  /* border: 2px solid red; */
+  z-index: -2;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  animation: animScroll1 500ms ease 0ms;
+  animation-timeline: scroll(block nearest);
+}
+
+.headerPresentacion {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.heroTituloContainer {
+  position: fixed;
+  z-index: -2;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: animScroll1 500ms ease 0ms;
+  animation-timeline: scroll(block nearest);
+}
+.heroTitulo {
+  font-size: 2.5rem;
+  color: rgba(0, 0, 0, 0.822);
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: -1px;
+  font-weight: 300;
+  text-align: center;
+  background-color: #f0dcb244;
+}
+
 /* Galeria principal */
+.flexContainerGlobal {
+  display: flex;
+  background-color: white;
+  margin-bottom: 20px;
+  background-color: var(--colorFondo);
+}
+
+.containerGaleria {
+  background-color: var(--fondoGaleria);
+  display: flex;
+  width: 70%;
+  margin: auto;
+  justify-content: center;
+  padding: 0 4px;
+  gap: 9px;
+}
+.foto {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  padding: 4.5px;
+}
+
+.col {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+}
 
 .titulo {
-  font-size: 2.6rem;
+  font-size: 2.5rem;
   text-align: center;
-  
   text-wrap: nowrap;
   color: var(--titulo);
-  letter-spacing: -1px;
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
   
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 .tituloDiv {
   display: flex;
@@ -78,17 +145,18 @@ html {
   width: 33%;
   /* border: 2px solid red; */
 }
+
+/* ICONOS Y MENU DESPLEGABLE */
 .iconos {
   position: sticky;
-
+  padding: 20px 0px 20px 0px;
   top: 0;
-  width: 80%;
+  width: 100%;
   margin: auto;
   z-index: 1;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   background-color: rgb(255, 255, 255);
-
   background-color: var(--colorFondo);
 }
 
@@ -109,17 +177,14 @@ html {
   margin: auto 0 auto 0;
 }
 .iconoContacto {
- 
   margin: auto 0 auto 0;
   height: 32px;
   width: 32px;
-  
   border-radius: 100%;
 }
 .menuDesplegableDiv {
   display: flex;
   flex-direction: column;
-
   justify-content: center;
   width: 33%;
 }
@@ -132,109 +197,87 @@ html {
   /* border: 2px solid red; */
 }
 
-/* ICONOS */
 .iconosMenuContainer {
-  opacity: 0;
+  opacity: 1;
   position: absolute;
   display: flex;
-
-  gap: 1px;
+  flex-direction: column;
+  top: 75px;
+  left: -200px;
   transition: all 350ms ease;
 }
-
-@keyframes animIconos {
-  from {
-  }
-  to {
-    opacity: 1;
-    translate: 50px 0;
-    gap: 20px;
-  }
+li {
+  list-style: none;
+  cursor: pointer;
+  border-left: 5px solid rgb(238, 238, 238);
+  font-size: 1.3rem;
+ font-family: "Lato", sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
-
-@keyframes animGaleria{
-  /* anim1 */
-  from{
-    clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
-  }
-  to{
-    clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
-  }
-  /* anim2 */
-
-  /* from{
-clip-path: polygon(100% 0, 0 0, 0 100%, 0 0);
-  }to{
-clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
-  } */
-
-   /* anim3 */
-
-
-
-}
-
 
 .animacionMenu {
-  animation: animIconos 250ms ease-in 100ms;
+  animation: animIconos 250ms ease 0ms;
   animation-fill-mode: forwards;
-  
 }
-.animacionGaleria{
-  animation: animGaleria 700ms ease-in-out 0ms;
+.animacionMenuInv {
+  animation: animMenuInv 250ms ease 0ms;
+  animation-fill-mode: forwards;
+}
+.animacionGaleria {
+  animation: animGaleria 450ms ease-in-out 0ms;
+}
+
+.animacionTextos {
+  animation: animacionTextos 250ms ease 0ms;
+  animation-fill-mode: forwards;
 }
 .iconosMenu {
-  width: 30px;
-  height: 30px;
-  
-  border-radius: 50%;
-  transition: background-color 350ms ease-out, translate 150ms ease-out;
+  width: 130px;
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  transition: border-color 350ms ease-out, border 350ms ease-out, 350ms ease-out,
+    translate 150ms ease-out;
 }
-#icoNautraleza, #icoCiudad, #icoGente, #icoComida{
-  
+#icoNaturaleza,
+#icoCiudad,
+#icoGente,
+#icoComida {
 }
 
 #icoNaturaleza:hover {
-  translate: 0 -2px;
-  background-color: var(--naturalezaFondo);
-  transition: background-color 150ms ease-in, translate 150ms ease-in;
+  border-left: 13px solid;
+  border-color: var(--naturalezaBorde);
+
+  transition: border 150ms ease-in, border-color 150ms ease-in,
+    translate 150ms ease-in;
 }
 #icoCiudad:hover {
-  translate: 0 -2px;
-  background-color: var(--ciudadFondo);
-  transition: background-color 150ms ease-in, translate 150ms ease-in;
+  border-left: 13px solid;
+  border-color: var(--ciudadBorde);
+  transition: border 150ms ease-in, border-color 150ms ease-in,
+    translate 150ms ease-in;
 }
 #icoGente:hover {
-  translate: 0 -2px;
-  background-color: var(--genteFondo);
-  transition: background-color 150ms ease-in, translate 150ms ease-in;
+  border-left: 13px solid;
+  border-color: var(--genteBorde);
+  transition: border 150ms ease-in, border-color 150ms ease-in,
+    translate 150ms ease-in;
 }
 
 #icoComida:hover {
-  translate: 0 -2px;
-  background-color: var(--comidaFondo);
-  transition: background-color 150ms ease-in, translate 150ms ease-in;
+  border-left: 13px solid;
+  border-color: var(--comidaBorde);
+  transition: border 150ms ease-in, border-color 150ms ease-in,
+    translate 150ms ease-in;
+}
+#icoTodo:hover {
+  border-left: 13px solid;
+  border-color: rgb(55, 55, 55);
+  transition: border 150ms ease-in, border-color 150ms ease-in,
+    translate 150ms ease-in;
 }
 
-.flexContainerGlobal {
-  display: flex;
-  background-color: white;
-  
-  margin-bottom: 20px;
-  background-color: var(--colorFondo);
-}
-
-.containerGaleria {
-  background-color: var(--fondoGaleria);
-  display: flex;
-  width: 80%;
-  margin: auto;
-  justify-content: center;
-  padding: 0 4px;
-
-  gap: 9px;
-  
-}
 .botonContainer {
   display: flex;
   justify-content: center;
@@ -257,24 +300,64 @@ clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
   transform: scale(0.95, 0.95);
   transition: all 200ms;
 }
-.foto {
+
+/* PRESENTACION */
+
+.presentacionContainer{
+  display: flex;
+  height: 150vh;
+  border: 2px solid red;
+}
+.presentacionTituloContainer{
+ 
+  
+  border: 10px solid green;
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  border-radius: 10px;
- 
 }
 
-.col {
-  width: 60%;
-
-  display: flex;
-  flex-direction: column;
-  gap: 9px;
+/* ANIMACIONES */
+@keyframes animIconos {
+  from {
+  }
+  to {
+    left: -37px;
+    opacity: 1;
+  }
 }
-
-.headerPresentacion {
-  font-family: "Times New Roman", Times, serif;
-  font-size: 2rem;
-  text-align: center;
+@keyframes animMenuInv {
+  from {
+    left: -37px;
+    opacity: 1;
+  }
+  to {
+    left: -200px;
+    opacity: 0;
+  }
+}
+@keyframes animScroll1 {
+  from {
+  }
+  to {
+    opacity: 0;
+  }
+}
+@keyframes animGaleria {
+  /* anim1 */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes animacionTextos {
+  from {
+    opacity: 0;
+    transform: translate(0 100px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0 0);
+  }
 }
