--- a/lightbox.css
+++ b/lightbox.css
@@ -159,6 +159,7 @@ body.lb-disable-scrolling {
 .lb-data .lb-caption {
   font-family: "Lato", sans-serif;
   font-size: 1.5rem;
+  color: #fffefc; 
   font-weight: 600;
   line-height: 1em;
 }
