--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,18 @@
   --colorBtn: rgb(0, 0, 0);
 }
 * {
-  box-sizing: border-box;
+   box-sizing: border-box;
   margin: 0;
+  
+}
+body{
+    -webkit-font-smoothing: antialiased; 
+  -moz-osx-font-smoothing: grayscale;  
+  text-rendering: optimizeLegibility;  
 }
 
 html {
+   
   scroll-behavior: smooth;
   background-color: var(--colorFondo);
 }
@@ -55,6 +62,7 @@ html {
 
 /* HERO */
 .heroContainer {
+   
   display: flex;
   height: 120dvh;
   /* border: 5px solid green; */
@@ -169,7 +177,6 @@ background: none;
 .flexContainerGlobal {
   display: flex;
   
-  
   background-color: var(--colorFondo);
 }
 
@@ -194,8 +201,12 @@ background: none;
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 15px;
+  transition: 200ms;
 }
-
+.foto:hover{
+  filter:brightness(60%);
+  transition: 200ms;
+}
 
 /* .col {
   width: 60%;
@@ -508,7 +519,7 @@ padding-bottom: 80px;
   font-family: "Lato", sans-serif;
   letter-spacing: 1px;
   
-  border-radius: 10px;
+  
   margin-bottom: 10px;
   width: 400px;
   height: 40px;
