--- a/styles.css
+++ b/styles.css
@@ -15,27 +15,26 @@
   --colorBtn: rgb(0, 0, 0);
 }
 * {
-   box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
-  
 }
-body{
-    -webkit-font-smoothing: antialiased; 
-  -moz-osx-font-smoothing: grayscale;  
-  text-rendering: optimizeLegibility;  
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 html {
-   
   scroll-behavior: smooth;
+  scroll-padding-top: 30px;
   background-color: var(--colorFondo);
 }
+
 /* Menu Animacion w3schools */
 .container {
   display: inline-block;
   cursor: pointer;
 }
-
 
 .bar1,
 .bar2,
@@ -45,7 +44,6 @@ html {
   background-color: var(--colorBtn);
   margin: 3px;
   transition: 0.4s;
-  
 }
 
 .change .bar1 {
@@ -62,9 +60,9 @@ html {
 
 /* HERO */
 .heroContainer {
-   
   display: flex;
   height: 120dvh;
+  z-index: -2;
   /* border: 5px solid green; */
   /* clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%); */
 }
@@ -80,27 +78,20 @@ html {
   animation-timeline: scroll(block nearest);
 }
 
-.headerPresentacion {
-  font-family: "Playfair Display", serif;
-  font-size: 2rem;
-  text-align: center;
-}
-.btnContactoContainer{
+.btnContactoContainer {
   opacity: 0;
   display: flex;
   justify-content: space-evenly;
 
-   position: fixed;
+  position: fixed;
   top: 85%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 70%;
   height: auto;
-  margin:  auto;
- 
+  margin: auto;
 }
-.btnContacto{
- 
+.btnContacto {
   padding: 15px 40px 15px 40px;
   font-family: "Lato", sans-serif;
   font-weight: 600;
@@ -113,25 +104,22 @@ html {
   cursor: pointer;
   transition: 150ms;
 }
-.btnContacto:hover{
+.btnContacto:hover {
   background-color: rgba(255, 255, 255, 0.252);
   transition: 150ms;
 }
-#btnGaleria, #btnClips{
-border: none;
-font-weight: 400;
-
+#btnGaleria,
+#btnClips {
+  border: none;
+  font-weight: 400;
 }
-#btnGaleria:hover, #btnClips:hover{
-background: none;
-
-
-
+#btnGaleria:hover,
+#btnClips:hover {
+  background: none;
 }
 .heroTituloContainer {
-  
   position: fixed;
-  z-index: 0;
+  z-index: -1;
   width: 70%;
   top: 45%;
   left: 50%;
@@ -141,7 +129,7 @@ background: none;
 }
 .heroTitulo {
   opacity: 0;
-  text-wrap-mode:nowrap;
+  text-wrap-mode: nowrap;
   font-size: 8rem;
   color: rgb(255, 250, 238);
   font-family: "Playfair Display", serif;
@@ -150,33 +138,21 @@ background: none;
   text-align: center;
   /* background-color: #f0dcb244; */
 }
-#svg1{
+#svg1 {
   /* border: 2px solid red; */
   position: relative;
   opacity: 0;
   left: 59%;
-  
- 
 }
-#fotografiaTexto{
-  font-family: "Lato", sans-serif;
-  position:relative;
-  left: 64%;
-  font-size: 3rem;
-  color: rgb(255, 255, 255);
-}
-
-
-
 
 /* Galeria principal */
-#contenedorGlobalFondoBlanco{
+#contenedorGlobalFondoBlanco {
   background-color: var(--colorFondo);
   border: 5px solid var(--colorFondo);
 }
 .flexContainerGlobal {
   display: flex;
-  
+
   background-color: var(--colorFondo);
 }
 
@@ -190,21 +166,20 @@ background: none;
   column-gap: 15px;
   z-index: 1;
   padding: 0 4px;
-  
 }
 .foto {
   display: block;
 
   width: 100%;
-  opacity: 0; 
+  opacity: 0;
   height: 100%;
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 15px;
   transition: 200ms;
 }
-.foto:hover{
-  filter:brightness(60%);
+.foto:hover {
+  filter: brightness(60%);
   transition: 200ms;
 }
 
@@ -233,14 +208,12 @@ background: none;
   width: 33%;
   /* border: 2px solid red; */
 }
-#linkGaleria{
+#linkGaleria {
   border-bottom: 3px solid black;
   text-decoration: none;
-
 }
 /* ICONOS Y MENU DESPLEGABLE */
 .iconos {
-  
   position: sticky;
   padding: 20px 0px 20px 0px;
   top: 0;
@@ -249,7 +222,7 @@ background: none;
   z-index: 2;
   display: flex;
   justify-content: space-evenly;
-  background-color: rgb(255, 255, 255);
+
   background-color: var(--colorFondo);
 }
 
@@ -318,14 +291,6 @@ background: none;
     translate 150ms ease-out;
 }
 
-
-
-#icoNaturaleza,
-#icoCiudad,
-#icoGente,
-#icoComida {
-}
-
 #icoNaturaleza:hover {
   border-left: 13px solid;
   border-color: var(--naturalezaBorde);
@@ -358,6 +323,12 @@ background: none;
   transition: border 150ms ease-in, border-color 150ms ease-in,
     translate 150ms ease-in;
 }
+#icoClip:hover {
+  border-left: 13px solid;
+  border-color: rgb(218, 62, 62);
+  transition: border 150ms ease-in, border-color 150ms ease-in,
+    translate 150ms ease-in;
+}
 
 .botonContainer {
   display: flex;
@@ -367,6 +338,7 @@ background: none;
   align-content: center;
 }
 .btnVerTodo {
+  z-index: 1;
   padding: 10px 30px 10px 30px;
   border: none;
   color: white;
@@ -378,49 +350,44 @@ background: none;
 .btnVerTodo:hover {
   background-color: rgb(65, 65, 65);
   transition: all 200ms;
+  cursor: pointer;
 }
 .btnVerTodo:active {
-  transform: scale(0.95, 0.95);
+  transform: scale(0.97, 0.97);
   transition: all 200ms;
 }
 
 /* PRESENTACION */
 
 .presentacionContainer {
-  
   display: flex;
-  
+
   background-color: var(--fondoGaleria);
-  justify-content: flex-start ;
+  justify-content: flex-start;
   border-top: 3px solid rgb(237, 237, 237);
   opacity: 1;
   padding: 100px 0 100px 0;
   margin: auto;
-  
+
   width: 70%;
- 
+
   /* border: 2px solid red; */
 }
 .fotoPresentacion {
   opacity: 0;
   object-fit: cover;
+
   width: 250px;
   height: 250px;
-  box-shadow: 5px 5px 10px rgb(201, 201, 201);
+  /* box-shadow: 5px 5px 10px rgb(201, 201, 201); */
   border-radius: 100%;
   transition: 500ms all;
   pointer-events: none;
 }
-/* .fotoPresentacion:hover{
-  width:450px;
-  height: 450px;
-  
-  transition: 500ms all;
-} */
+
 .listaPresentacion {
-   position: relative;
-   top: 50%;
-   opacity: 0;
+  position: relative;
+
   list-style: none;
   line-height: 30px;
   font-size: 1.5rem;
@@ -429,53 +396,76 @@ background: none;
   font-weight: 300;
   font-style: normal;
 }
-#listaPresentacionContainer {
- 
+
+.lista:nth-child(1) {
+  transform: translateX(-100%);
+
+  opacity: 0;
+  animation-delay: 200ms;
+}
+.lista:nth-child(2) {
+  transform: translateX(-100%);
+
+  opacity: 0;
+  animation-delay: 300ms;
+}
+.lista:nth-child(3) {
+  transform: translateX(-100%);
+
+  opacity: 0;
+  animation-delay: 400ms;
+}
+.lista:nth-child(4) {
+  transform: translateX(-100%);
+
+  opacity: 0;
+  animation-delay: 500ms;
+}
+.lista:nth-child(5) {
+  transform: translateX(-100%);
+
+  opacity: 0;
+  animation-delay: 600ms;
 }
 
-#redesSocialesContainer{
- opacity: 0;
-display: flex;
-position: relative;
-bottom: 50px;
-height: 100%;
-width: 100%;
-flex-direction: column;
-align-items: flex-end ; 
-justify-content: flex-start ;
-
+#redesSocialesContainer {
+  opacity: 0;
+  display: flex;
+  position: relative;
+  bottom: 50px;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-start;
 }
 
-#redesSocialesTexto{
-
-font-family: "Playfair Display", serif;
-font-size: 9rem;
+#redesSocialesTexto {
+  font-family: "Playfair Display", serif;
+  font-size: 8rem;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-padding-bottom: 80px;
-
+  padding-bottom: 80px;
 }
-#redesSocialesIconos{
+#redesSocialesIconos {
   /* border: 2px solid red; */
   display: flex;
   padding-right: 10px;
   gap: 50px;
-  
 }
-.icoRedes{
-  
+.icoRedes {
   clip-path: circle();
   background-color: var(--colorFondo);
   padding: 7px;
   transition: 300ms ease;
 }
-.icoRedes:hover{
+.icoRedes:hover {
   background-color: rgb(226, 226, 226);
   transition: 300ms ease;
 }
 
-#linkRedes{
+#linkRedes {
   text-decoration: none;
   color: black;
 }
@@ -483,7 +473,6 @@ padding-bottom: 80px;
 /*Formulario*/
 
 #seccionFormularioContainer {
-  
   display: flex;
   opacity: 0;
   background-color: var(--fondoGaleria);
@@ -501,7 +490,7 @@ padding-bottom: 80px;
   opacity: 1;
   display: flex;
   flex-direction: column;
-  
+
   padding: 10px;
   /* border: 2px solid green; */
 }
@@ -518,21 +507,19 @@ padding-bottom: 80px;
   font-weight: 400;
   font-family: "Lato", sans-serif;
   letter-spacing: 1px;
-  
-  
+
   margin-bottom: 10px;
   width: 400px;
   height: 40px;
   border: none;
   border-bottom: 2px solid lightgray;
 }
-.inputFormulario::placeholder{
-font-size: 1.1rem;
-color: rgb(195, 195, 195);
-font-weight: 300;
+.inputFormulario::placeholder {
+  font-size: 1.1rem;
+  color: rgb(195, 195, 195);
+  font-weight: 300;
 }
 .inputFormulario:focus {
-  
   outline: none;
   border: none;
   border-radius: 0;
@@ -544,22 +531,20 @@ font-weight: 300;
   margin: 10px auto;
 }
 
-#contactameTextoContainer{
-/* border: 2px solid red; */
-width: 100%;
-
+#contactameTextoContainer {
+  /* border: 2px solid red; */
+  width: 100%;
 }
 
-#contactameTexto{
+#contactameTexto {
   opacity: 1;
-font-family: "Playfair Display", serif;
-font-size: 9rem;
+  font-family: "Playfair Display", serif;
+  font-size: 8rem;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-text-align: center;
+  text-align: center;
 }
-
 
 /* ANIMACIONES */
 @keyframes animIconos {
@@ -596,26 +581,25 @@ text-align: center;
     opacity: 1;
   }
 }
-@keyframes animPresentacion{
-  from{
+@keyframes animPresentacion {
+  from {
     opacity: 0;
-
-  }to{
-    opacity:.9;
+  }
+  to {
+    opacity: 0.9;
   }
 }
 @keyframes animacionTextos {
   from {
- 
   }
   to {
     opacity: 1;
-    top: 0;
+
+    transform: translateX(0);
   }
 }
 @keyframes animacionBotones {
   from {
- 
   }
   to {
     opacity: 1;
@@ -636,20 +620,20 @@ text-align: center;
   animation-fill-mode: forwards;
 }
 
-.animacionPresentacion{
+.animacionPresentacion {
   animation: animPresentacion 1000ms ease 800ms;
   animation-fill-mode: forwards;
 }
-.animacionTituloHero{
+.animacionTituloHero {
   animation: animPresentacion 1500ms ease 600ms;
   animation-fill-mode: forwards;
 }
-.animacionFotografiaTexto{
+.animacionFotografiaTexto {
   animation: animPresentacion 600ms linear 0ms;
   animation-fill-mode: forwards;
 }
-.animacionFormulario{
-  animation: animPresentacion 500ms ease 300ms;
+.animacionFormulario {
+  animation: animPresentacion 500ms ease 900ms;
   animation-fill-mode: forwards;
 }
 
@@ -657,7 +641,163 @@ text-align: center;
   animation: animacionTextos 500ms ease 600ms;
   animation-fill-mode: forwards;
 }
-.animacionBotones{
+.animacionBotones {
   animation: animacionBotones 900ms ease-in-out 600ms;
   animation-fill-mode: forwards;
+}
+
+/* Celulares */
+@media only screen and (max-width: 600px) {
+  html {
+    scroll-padding-top: 90px;
+  }
+  .heroContainer {
+    width: 100dvw;
+    height: 120dvh;
+
+  }
+  .heroImagen {
+    width: 100dvw;
+    height: 100dvh;
+  
+  }
+  .btnContactoContainer {
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    transform: translate(-50%, -20%);
+    width: 100%;
+  }
+  .btnContacto {
+    font-size: 1.5rem;
+  }
+
+  .heroTituloContainer {
+    z-index: -1;
+
+    width: 100%;
+    top: 40%;
+    left: 0;
+    transform: translate(0, 0);
+  }
+  .heroTitulo {
+    font-size: 3.7rem;
+    font-weight: 500;
+  }
+  #svg1 {
+    
+    position: relative;
+    opacity: 0;
+    left: 55%;
+    width: 170px;
+    height: 100px;
+  }
+
+  /* GALERIA */
+
+  .containerGaleria {
+    width: 100%;
+    margin: auto;
+    columns: 2 180px;
+    column-gap: 10px;
+  }
+  .foto {
+    border-radius: 3px;
+    margin-bottom: 10px;
+  }
+  .titulo {
+    font-size: 2rem;
+  }
+  .iconosMenu {
+    font-weight: 400;
+  }
+  /* PRESENTACION */
+  .presentacionContainer {
+    flex-direction: column;
+    width: 90%;
+    padding: 20px 0 20px 0;
+    align-items: center;
+  }
+  .fotoPresentacion {
+    width: 200px;
+    height: 200px;
+  }
+  .lista {
+    font-size: 1.1rem;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: center;
+  }
+  .listaPresentacion {
+    padding: 20px 0 0 0;
+  }
+
+  #redesSocialesTexto {
+    font-size: 5rem;
+    padding: 0;
+
+    text-wrap: nowrap;
+  }
+  #redesSocialesContainer {
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  #redesSocialesIconos {
+    padding:20px 0 20px 0;
+  }
+/* SI NO HAGO ESTO, EL NAVEGADOR SE BUGUEA Y NO MUESTRA LA LISTA */
+  .lista:nth-child(1),
+  .lista:nth-child(2),
+  .lista:nth-child(3),
+  .lista:nth-child(4),
+  .lista:nth-child(5) {
+   transform: translate(0,0);
+  }
+
+  #seccionFormularioContainer {
+ 
+  
+  flex-direction: column;
+  padding: 20px 0 20px 0;
+  
+    align-items: center;
+    width: 100%;
+  
+}
+#formulario {
+ 
+    padding: 0;
+
+  width: 100%;
+}
+.labelFormulario {
+  line-height: 30px;
+  font-size: 1.3rem;
+ font-weight: 400;
+}
+.inputFormulario {
+  font-size: 1.2rem;
+  font-weight: 400;
+  width:320px;
+  height: 40px;
+ 
+}
+
+
+#contactameTextoContainer {
+   text-align: center;
+    padding: 0 0 20px 0;
+ 
+  width: 100%;
+}
+
+#contactameTexto {
+  
+  font-size: 5rem;
+  
+}
 }
