click menu galeria

--- a/styles.css
+++ b/styles.css
@@ -212,6 +212,10 @@ html {
   border-bottom: 3px solid black;
   text-decoration: none;
 }
+#linkMenu{
+  text-decoration: none;
+  color: black;
+}
 /* ICONOS Y MENU DESPLEGABLE */
 .iconos {
   position: sticky;
