--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ html {
   scroll-behavior: smooth;
   scroll-padding-top: 30px;
   background-color: var(--colorFondo);
+
 }
 
 /* Menu Animacion w3schools */
@@ -165,7 +166,7 @@ html {
   columns: 3 300px;
   column-gap: 15px;
   z-index: 1;
-  padding: 0 4px;
+  padding-top: 80px;
 }
 .foto {
   display: block;
@@ -722,6 +723,7 @@ footer{
 
   .containerGaleria {
     width: 100%;
+    padding-top: 10px;
     margin: auto;
     columns: 2 180px;
     column-gap: 10px;
