--- a/styles.css
+++ b/styles.css
@@ -352,8 +352,8 @@ html {
 .fotoPresentacion {
   opacity: 0;
   object-fit: cover;
-  width: 230px;
-  height: 230px;
+  width: 200px;
+  height: 200px;
   border-radius: 100%;
   transition: 500ms all;
   pointer-events: none;
@@ -364,7 +364,7 @@ html {
 
   list-style: none;
   line-height: 40px;
-  font-size: 1.5rem;
+  font-size: clamp(1.3rem, 1vw, 1.6rem);
   letter-spacing: 1px;
   font-family: "Lato", sans-serif;
   font-weight: 300;
@@ -402,7 +402,7 @@ html {
   opacity: 0;
   display: flex;
   position: relative;
-  bottom: 50px;
+  bottom: 30px;
   height: 100%;
   width: 100%;
   flex-direction: column;
@@ -412,7 +412,8 @@ html {
 
 #redesSocialesTexto {
   font-family: "Playfair Display", serif;
-  font-size: 8rem;
+  
+  font-size: clamp(4.5rem, 6vw, 8.2rem);
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -446,7 +447,7 @@ html {
   opacity: 0;
   background-color: var(--fondoGaleria);
   justify-content: flex-end;
-  align-items: start;
+  align-items: center;
   margin: auto auto 200px auto;
   padding: 100px 0 100px 0;
   width: 70%;
@@ -459,7 +460,7 @@ html {
   opacity: 1;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  
  
 }
 .labelFormulario {
@@ -483,7 +484,7 @@ html {
   border-bottom: 2px solid lightgray;
 }
 .inputFormulario::placeholder {
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: rgb(195, 195, 195);
   font-weight: 300;
 }
@@ -506,7 +507,7 @@ html {
 #contactameTexto {
   opacity: 1;
   font-family: "Playfair Display", serif;
-  font-size: 8rem;
+  font-size: clamp(4.4rem, 6vw, 8.2rem);
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -522,7 +523,7 @@ footer {
   align-items: center;
   justify-content: center;
   margin-top: 100px;
-  font-size: 1rem;
+  font-size: .9rem;
   font-family: "Lato", serif;
   font-weight: 300;
   color: rgb(192, 192, 192);
@@ -702,8 +703,6 @@ footer {
     height: 200px;
   }
   .lista {
-    font-size: 1.1rem;
-
     line-height: 30px;
     text-align: center;
   }
@@ -712,7 +711,7 @@ footer {
   }
 
   #redesSocialesTexto {
-    font-size: 4.5rem;
+    /* font-size: 4.5rem; */
     padding: 0;
 
     text-wrap: nowrap;
@@ -766,9 +765,7 @@ footer {
 
     width: 100%;
   }
-  #contactameTexto {
-    font-size: 4rem;
-  }
+ 
 
   .btnFormulario {
     margin: 40px auto;
