--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,58 @@
 :root {
   --parrafo1: rgb(38, 38, 38);
-  --naturalezaFondo: #cae8bd;
-  --naturalezaBorde: #bdffa0;
-  --ciudadFondo: #eeeeee;
-  --ciudadBorde: #d4d4d4;
-  --genteFondo: #ffebdf;
-  --genteBorde: #fee8d9;
-  --comidaFondo: #fff6c8;
-  --comidaBorde: #ffec80;
+  --naturalezaBorde: oklch(76.8% 0.233 130.85);
+  --ciudadBorde: oklch(86.9% 0.005 56.366);
+  --genteBorde: oklch(96.9% 0.015 12.422);
+  --comidaBorde: oklch(90.5% 0.182 98.111);
+  --videoClipBorde: oklch(63.7% 0.237 25.331);
 
-  --titulo: black;
-  --colorFondo: #fffefc;
-  --fondoGaleria: #fffefc;
-  --colorBtn: rgb(0, 0, 0);
+  --titulo: oklch(26.8% 0.007 34.298);
+  --colorBorde: oklch(92.3% 0.003 48.717);
+  --colorFondo: oklch(98.5% 0.001 106.423);
+  --fondoGaleria: oklch(98.5% 0.001 106.423);
+  --colorBtn: oklch(14.7% 0.004 49.25);
+}
+
+/* SCROLLBAR */
+*::-webkit-scrollbar {
+  height: 11px;
+  width: 11px;
+  
+}
+*::-webkit-scrollbar-track {
+  border-radius: 7px;
+  background-color: #FFFEFC;
+  border: 10px solid #FFFFFF;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #F8F8F8;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #FFFFFF;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background-color: #171717;
+  border: 2px solid #FFFFFF;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #454545;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #171717;
 }
 * {
   box-sizing: border-box;
   margin: 0;
+  
 }
+
+
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -129,10 +164,10 @@ html {
   opacity: 0;
   text-wrap-mode: nowrap;
   font-size: 8rem;
-  color: rgb(255, 250, 238);
+  color: oklch(98.5% 0.001 106.423);
   font-family: "Playfair Display", serif;
   letter-spacing: -1px;
-  font-weight: 300;
+  font-weight: 500;
   text-align: center;
  }
 #svg1 {
@@ -185,7 +220,7 @@ html {
 
   font-family: "Playfair Display", serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 500;
   font-style: normal;
 }
 .tituloDiv {
@@ -195,7 +230,7 @@ html {
   width: 33%;
   }
 #linkGaleria {
-  border-bottom: 3px solid black;
+  /* border-bottom: 3px solid black; */
   text-decoration: none;
 }
 #linkMenu {
@@ -275,7 +310,7 @@ html {
   border-left: 0px solid rgb(238, 238, 238);
 
   width: 130px;
-  background-color: #fffefc;
+  background-color: var(--colorFondo);
   padding: 10px;
   transition: border-color 150ms ease-out, border 150ms ease-out, 150ms ease-out,
     translate 150ms ease-out;
@@ -287,9 +322,13 @@ html {
 #icoComida:hover,
 #icoTodo:hover,
 #icoClip:hover {
-  border-left: 13px solid;
+  border-left: 10px solid;
+  
   transition: border 150ms ease-in, border-color 150ms ease-in,
     translate 150ms ease-in;
+}
+#icoNaturaleza:hover{
+  border-color: var(--naturalezaBorde);
 }
 #icoCiudad:hover {
   border-color: var(--ciudadBorde);
@@ -305,7 +344,7 @@ html {
    border-color: rgb(55, 55, 55);
 }
 #icoClip:hover {
-  border-color: rgb(218, 62, 62);
+  border-color: var(--videoClipBorde);
 }
 
 .botonContainer {
@@ -342,7 +381,7 @@ html {
 
   background-color: var(--fondoGaleria);
   justify-content: flex-start;
-  border-top: 3px solid rgb(237, 237, 237);
+  border-top:3px solid var(--colorBorde);
   opacity: 1;
   padding: 100px 0 100px 0;
   margin: auto;
@@ -411,15 +450,7 @@ html {
   justify-content: flex-start;
 }
 
-#redesSocialesTexto {
-  font-family: "Playfair Display", serif;
-  
-  font-size: clamp(4.5rem, 6vw, 8.2rem);
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  
-}
+
 #redesSocialesIconos {
   display: flex;
   gap: 50px;
@@ -431,7 +462,7 @@ html {
   transition: 300ms ease;
 }
 .icoRedes:hover {
-  background-color: rgb(240, 240, 240);
+  background-color: oklch(92.3% 0.003 48.717);
   transition: 300ms ease;
 }
 
@@ -452,10 +483,12 @@ html {
   padding: 100px 0 100px 0;
   width: 70%;
   height: auto;
-  border-top: 3px solid rgb(237, 237, 237);
-  border-bottom: 3px solid rgb(237, 237, 237);
+  border-top:3px solid var(--colorBorde);
+  border-bottom: 3px solid var(--colorBorde);
  
 }
+
+
 #formulario {
   opacity: 1;
   display: flex;
@@ -481,8 +514,9 @@ html {
   margin-bottom: 10px;
   width: 400px;
   height: 40px;
+  background: oklch(98.5% 0 0);
   border: none;
-  border-bottom: 2px solid lightgray;
+  border-bottom: 3px solid var(--colorBorde);
 }
 .inputFormulario::placeholder {
   font-size: 1rem;
@@ -505,12 +539,13 @@ html {
    width: 100%;
 }
 
-#contactameTexto {
+#contactameTexto, #redesSocialesTexto {
   opacity: 1;
   font-family: "Playfair Display", serif;
+  color:  var(--titulo);
   font-size: clamp(4.4rem, 6vw, 8.2rem);
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 500;
   font-style: normal;
   text-align: center;
 }
